# KODASS

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
CGUI/CLogoScreen/: CLogoScreen.cpp  CLogoScreen.h
CGUI/CManager/: CMakeLists.txt  CManager.cpp  CManager.h
CGUI/CScreen/: CMakeLists.txt  CScreen.cpp  CScreen.h
CGUI/CTools/: ConsoleCalls.cpp  ConsoleCalls.h
CGUI/CWidgets/: CMakeLists.txt  CTextView.cpp  CTextView.h
CGUI/CWidgets/CTextView/: CTextView.cpp  CTextView.h
CGUI/ConsoleAPI/: CMakeLists.txt  ConsoleAPI.cpp  ConsoleAPI.h
CGUI/Context/: CMakeLists.txt  Context.cpp  Context.h
CGUI/Theme/: CMakeLists.txt  Theme.cpp  Theme.h
CGUI/Themes/Color/: Color.cpp  Color.h
CGUI/View/: AView.cpp  AView.h  CMakeLists.txt  CView.cpp  CView.h
CManager/: CManager.cpp  CManager.h
ConsoleAPI/: CMakeLists.txt  ConsoleAPI.cpp  ConsoleAPI.h
